fix ui overlapping

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,12 +26,3 @@
 //   from { transform: rotate(0deg); }
 //   to { transform: rotate(360deg); }
 // }
-
-
-.opacity-05{
-  opacity: 0.5;
-}
-
-.opacity-1{
-  opacity: 1;
-}
