--- a/src/components/R2D2Player/R2D2Player.scss
+++ b/src/components/R2D2Player/R2D2Player.scss
@@ -1,3 +1,5 @@
 .r2d2-svg{
   width:30px;
+  position: relative;
+  z-index: 1;
 }
