--- a/src/components/Teleporter/Teleporter.scss
+++ b/src/components/Teleporter/Teleporter.scss
@@ -1,3 +1,5 @@
 .teleporter-svg{
   width:30px;
+  position: relative;
+  z-index: 0;
 }
